--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "bootstrap-sass": "~3.3.5",
     "components-font-awesome": "~4.4.0",
-    "jquery": "1.11.*"
+    "jquery": "1.11.*",
+    "jquery.scrollTo": "~2.1.2"
   }
 }
